# TPs-ECA4

./: Ep 16 Smooth AWG files.txt  README.md
AltiumDesigner/Generador de Funciones/: 2-R2 Dac.SchDoc  Alimentacion.SchDoc  Control.SchDoc  Generador de Funciones.IntLib  Generador de Funciones.OutJob  Generador de Funciones.PrjPcb  Generador de Funciones.PrjPcbStructure  PCB_Awg.PcbDoc  PcbLib1.PcbLib  Perifericos.SchDoc  Salida.SchDoc  Schlib1.SchLib  main.SchDoc
AltiumDesigner/Generador de Funciones/Gerbers/: pcb_awg-plated.txt  pcb_awg.gbl  pcb_awg.gbo  pcb_awg.gbs  pcb_awg.gm1  pcb_awg.gtl  pcb_awg.gto  pcb_awg.gts  pcb_awg.rar  pcb_awg.txt
AltiumDesigner/Generador de Funciones/Project Outputs for Generador de Funciones/: Design Rule Check - PCB_Awg.drc  Design Rule Check - PCB_Awg.html  PCB_Awg-Plated.TXT  PCB_Awg-macro.APR_LIB  PCB_Awg.DRR  PCB_Awg.EXTREP  PCB_Awg.GBL  PCB_Awg.GBO  PCB_Awg.GBS  PCB_Awg.GKO  PCB_Awg.GM1  PCB_Awg.GTL  PCB_Awg.GTO  PCB_Awg.GTS  PCB_Awg.LDP  PCB_Awg.REP  PCB_Awg.RUL  PCB_Awg.TXT  PCB_Awg.apr  Status Report.Txt
AltiumDesigner/Generador de Funciones/__Previews/: 2-R2 Dac.SchDocPreview  Alimentacion.SchDocPreview  Control.SchDocPreview  Perifericos.SchDocPreview  Salida.SchDocPreview  main.SchDocPreview
AltiumDesigner/Librerias/Imported SolderJumper-2_P1.3mm_Bridged_Pad1.0x1.5mm/: Jumper.PcbLib  SolderJumper-2_P1.3mm_Bridged_Pad1.0x1.5mm.PrjPcb
AltiumDesigner/Librerias/Imported TestPoint_Pad_2.0x2.0mm/: TestPoint.PcbLib  TestPoint_Pad_2.0x2.0mm.PrjPcb
AltiumDesigner/Librerias/RASPBERRY_PI_PICO/: RASPBERRY_PI_PICO.LibPkg  RASPBERRY_PI_PICO.PcbLib  RASPBERRY_PI_PICO.SchLib
AltiumDesigner/Librerias/RASPBERRY_PI_PICO/Project Outputs for RASPBERRY_PI_PICO/: RASPBERRY_PI_PICO.IntLib
Awg_sdk/Gen_Func/: CMakeLists.txt  FreeRTOSConfig.h  Gen_Func.c
Awg_sdk/Gen_Func/include/: awg.h
Awg_sdk/Gen_Func/src/: awg.c
Awg_sdk/Gen_Func/src/qm/: Tp_ECA_IV_Awg.qm  Tp_ECA_IV_Awg.qms  blinky.c  bsp.c  bsp.h  main.c  mef_awg.c  mef_awg.h
Display/botones/: 0.zi  1.zi  letra.zi
Gen_Func_QP_Freertos/blink_qp_freertos/: CMakeLists.txt
Gen_Func_QP_Freertos/blink_qp_freertos/include/: FreeRTOSConfig.h  X9C103S.h  amplificacion.h  awg.h  config.h  dacR2R.h  display.h  filtro.h  offset.h  periferico.h  signal.h
Gen_Func_QP_Freertos/blink_qp_freertos/qpc/qm/: blinky.c  bsp.c  bsp.h  dpp.h  dpp.qm  dpp.qms  main.c  mef_awg.c  mef_awg.h
Gen_Func_QP_Freertos/blink_qp_freertos/src/: X9C103S.c  amplificacion.c  awg.c  dacR2R.c  display.c  filtro.c  main.c  offset.c  periferico.c  prog_pio.pio  signal.c
Programa/Tp2_Eca4/include/: HMI_Local.h  Sensado.h
Programa/Tp2_Eca4/lib/HMI_Local/: HMI_Local.cpp  HMI_Local.h
Programa/Tp2_Eca4/lib/Sensado/: Sensado.cpp  Sensado.h
Programa/Tp2_Eca4/src/: HMI_Local.c  Sensado.c  main.cpp
Programa_Awg/Awg/: pioasm_compile.py  platformio.ini
Programa_Awg/Awg/include/: FreeRTOSConfig.h  pio.h
Programa_Awg/Awg/src/: Awg.pio  main.c  main.cpp
Qp_SM/: Tp_ECA_IV_Awg.qm  Tp_ECA_IV_Awg.qms  bsp.c  bsp.h  main.c  mef_awg.c  mef_awg.h
Simulacion/: CircuitoAmplificacion.TNO  CircuitoAmplificacion.bak_cir  CircuitoAmplificacion.cir  CircuitoAmplificacion_cir.inx  Potencia.bak_cir  Potencia.cir  Potencia_cir.inx
